// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • Readme \\| [API Index](packages.md)

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • [Readme](index.md) \\| API Index

***

# packages-example

## Packages

- [package-1](package-1/index.md)
- [package-1b](package-1b/index.md)
- [package-2](package-2/index.md)
- [package-3](package-3/index.md)
- [package-4](package-4/index.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**package-1 v1.0.0** • [Readme](index.md) \\| API Index

***

[packages-example](../index.md) / package-1

# package-1

Comments for package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"**package-2** • [Readme](index.md) \\| API Index

***

[packages-example](../index.md) / package-2

# package-2

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile member page for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • [Readme](../README.md) \\| [API Index](../packages.md)

***

[package-1](../README.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**package-1 v1.0.0** • [Readme](../index.md) \\| [API Index](../globals.md)

***

[packages-example](../../index.md) / [package-1](../index.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example** • Readme \\| [API Index](packages.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"**package-1 v1.0.0** • Readme \\| [API Index](globals.md)

***

[packages-example](../index.md) / package-1

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile readmes for a packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"**packages-example v0.0** • API Index

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.

## Packages

- [package-1](package-1/index.md)
- [package-1b](package-1b/index.md)
- [package-2](package-2/index.md)
- [package-3](package-3/index.md)
- [package-4](package-4/index.md)
"
`;
